<?xml version="1.0" encoding="utf-8"?>
<resources>
    <item name="tabNavMovie" type="id" />
    <item name="tabNavTvShow" type="id" />
</resources>